--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/main.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/google-fonts.css">
+    <title>Agnecy Landing Page</title>
   </head>
-  <body> 
-    <h1>Test</h1>
+  <body class="page">
     <script src="assets/js/main.min.js"> </script>
   </body>
 </html>
