Create video repository

--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
     <title>Agnecy Landing Page</title>
   </head>
   <body class="page">
+    <section class="homepage"> 
+      <div class="container"> 
+        <div class="homepage-container">
+          <nav class="menu">
+            <ul class="menu__list"> 
+              <li class="menu__item"><a href="home.html">home</a></li>
+              <li class="menu__item"><a href="portfolio.html">portfolio</a></li>
+              <li class="menu__item"><a href="about us.html">about us</a></li>
+              <li class="menu__item"><a href="contact.html">contact</a></li>
+            </ul>
+          </nav>
+          <div class="homepage-wrap"> 
+            <div class="homepage-info"> 
+              <h1 class="homepage-info__title"> </h1>
+              <p class="homepage-info__text"> </p>
+              <button type="submit">Contact Us</button>
+            </div>
+            <div class="homepage-video">
+              <video src="../assets/video/ALPS &amp; DOLOMITES (Drone + Timelapse) Heavenly Nature Relaxation™ 5 Minute Short Film in 4K UHD.mp4"> </video>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="assets/js/main.min.js"> </script>
   </body>
 </html>
