--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
               <button type="submit">Contact Us</button>
             </div>
             <div class="homepage-video">
-              <video src="../assets/video/ALPS &amp; DOLOMITES (Drone + Timelapse) Heavenly Nature Relaxation™ 5 Minute Short Film in 4K UHD.mp4"> </video>
+              <video id="homepage-video" width="550" height="355" poster="../assets/images/dest/video-preview.jpg" controls>
+                <source src="../assets/video/ALPS &amp; DOLOMITES (Drone + Timelapse) Heavenly Nature Relaxation™ 5 Minute Short Film in 4K UHD.mp4" type="video/mp4">
+              </video>
             </div>
           </div>
         </div>
