--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
         <div class="homepage-container">
           <nav class="menu">
             <ul class="menu__list"> 
-              <li class="menu__item"><a href="home.html">home</a></li>
-              <li class="menu__item"><a href="portfolio.html">portfolio</a></li>
-              <li class="menu__item"><a href="about us.html">about us</a></li>
-              <li class="menu__item"><a href="contact.html">contact</a></li>
+              <li class="menu__item"><a class="menu__link" href="home.html">home</a></li>
+              <li class="menu__item"><a class="menu__link" href="portfolio.html">portfolio</a></li>
+              <li class="menu__item"><a class="menu__link" href="about us.html">about us</a></li>
+              <li class="menu__item"><a class="menu__link" href="contact.html">contact</a></li>
             </ul>
           </nav>
           <div class="homepage-wrap"> 
             <div class="homepage-info"> 
-              <h1 class="homepage-info__title"> </h1>
-              <p class="homepage-info__text"> </p>
-              <button type="submit">Contact Us</button>
+              <h1 class="homepage-info__title">our strong organaisation</h1>
+              <p class="homepage-info__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis ratione libero quis enim doloremque. Doloremque repellat eveniet numquam sequi autem, provident porro possimus error reiciendis optio!</p>
+              <button class="btn homepage-btn" type="submit">Contact Us</button>
             </div>
-            <div class="homepage-video">
-              <video id="homepage-video" width="550" height="355" poster="../assets/images/dest/video-preview.jpg" controls>
+            <div class="homepage-video-container">
+              <video class="homepage-video" id="homepage-video" width="550" height="355" poster="../assets/images/dest/video-preview.jpg" controls>
                 <source src="../assets/video/ALPS &amp; DOLOMITES (Drone + Timelapse) Heavenly Nature Relaxation™ 5 Minute Short Film in 4K UHD.mp4" type="video/mp4">
               </video>
             </div>
