--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
               <button class="btn homepage-btn" type="submit">Contact Us</button>
             </div>
             <div class="homepage-video-container">
-              <video class="homepage-video" id="homepage-video" width="550" height="355" poster="../assets/images/dest/video-preview.jpg" controls>
+              <video class="homepage-video" id="homepage-video" width="550" height="355" poster="../assets/images/dest/video-preview.jpg">
                 <source src="../assets/video/ALPS &amp; DOLOMITES (Drone + Timelapse) Heavenly Nature Relaxation™ 5 Minute Short Film in 4K UHD.mp4" type="video/mp4">
               </video>
+              <div class="homepage-video__play-btn" id="play"></div>
             </div>
           </div>
         </div>
