--- a/index.html
+++ b/index.html
@@ -37,6 +37,36 @@
         </div>
       </div>
     </section>
-    <script src="assets/js/main.min.js"> </script>
+    <section class="services"> 
+      <div class="container"> 
+        <div class="services-container"> 
+          <div class="services-info"> 
+            <h2 class="services-info__title">do you know we can provide for you ?</h2>
+            <p class="services-info__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et.Lorem ni ipsum dolor sit amet, consectetur adipis cing elit, ed doi eiusmod tempor incididunt ut labore et.</p>
+            <button class="btn service-btn" type="submit">Learn More</button>
+          </div>
+          <div class="services-list"> 
+            <div class="service-box"><i class="fas fa-cog"> </i>
+              <h3 class="service__title">Management</h3>
+              <p class="service__text">Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
+            </div>
+            <div class="service-box"><i class="fas fa-pencil-alt"></i>
+              <h3 class="service__title">UI /UX Design</h3>
+              <p class="service__text">Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor sit amet</p>
+            </div>
+            <div class="service-box"><i class="fas fa-gem"></i>
+              <h3 class="service__title">Logo / Branding</h3>
+              <p class="service__text">Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet</p>
+            </div>
+            <div class="service-box"><i class="fas fa-truck"></i>
+              <h3 class="service__title">Animation</h3>
+              <p class="service__text">Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor sit amet, consect netur.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="assets/js/main.min.js"></script>
+    <script src="https://kit.fontawesome.com/36446de779.js" crossorigin="anonymous"> </script>
   </body>
 </html>
