--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         </div>
       </div>
     </section>
-<<<<<<< HEAD
     <section class="services"> 
       <div class="container"> 
         <div class="services-container"> 
@@ -62,7 +61,11 @@
             <div class="service-box"><i class="fas fa-truck"></i>
               <h3 class="service__title">Animation</h3>
               <p class="service__text">Lorem ipsum dolor sitea amet, zixf conseit  adipi cing elit, seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor sit amet, consect netur.</p>
-=======
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="products">
       <div class="container"> 
         <div class="products-container"> 
@@ -72,25 +75,51 @@
           </div>
           <div class="products-portfolio">
             <ul class="products__list">
-              <li class="products__item"> <a class="products__link" href="#">all</a></li>
-              <li class="products__item"> <a class="products__link" href="#">print template</a></li>
-              <li class="products__item"> <a class="products__link" href="#">web template</a></li>
-              <li class="products__item"> <a class="products__link" href="#">user interface</a></li>
-              <li class="products__item"> <a class="products__link" href="#">mock-up</a></li>
+              <li class="products__item"> <a class="products__link" onclick="choose('all')">all</a></li>
+              <li class="products__item"> <a class="products__link" onclick="choose('print template')">print template</a></li>
+              <li class="products__item"> <a class="products__link" onclick="choose('web template')">web template</a></li>
+              <li class="products__item"> <a class="products__link" onclick="choose('user interface')">user interface</a></li>
+              <li class="products__item"> <a class="products__link" onclick="choose('mock-up')">mock-up</a></li>
             </ul>
             <div class="products-template"> 
-              <div class="template"></div>
->>>>>>> products
+              <div class="template print-template"></div>
+              <div class="template web-template"></div>
+              <div class="template print-template"></div>
+              <div class="template user-interface"></div>
+              <div class="template web-template"></div>
+              <div class="template mock-up"></div>
+              <div class="template user-interface"></div>
+              <div class="template user-interface"></div>
             </div>
           </div>
         </div>
       </div>
     </section>
-<<<<<<< HEAD
+    <section class="team"> 
+      <div class="container"> 
+        <div class="team-container"> 
+          <div class="team-wrap"> 
+            <h2 class="team__title">Meet our team</h2>
+            <p class="team__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed dooing eiusmod tempor incididut labore Ui / Ux , print template.</p>
+          </div>
+          <div class="team-list">
+            <div class="team-worker-pic"></div>
+            <div class="team-worker-info"> 
+              <div class="team-worker-info__title"> </div>
+              <div class="team-worker-info__text"> </div>
+              <div class="team-worker-info__social-links"></div>
+            </div>
+            <div class="team-workers">
+              <div class="team-workers__box"></div>
+              <div class="team-workers__box"></div>
+              <div class="team-workers__box"></div>
+              <div class="team-workers__box"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="assets/js/main.min.js"></script>
     <script src="https://kit.fontawesome.com/36446de779.js" crossorigin="anonymous"> </script>
-=======
-    <script src="assets/js/main.min.js"> </script>
->>>>>>> products
   </body>
 </html>
