--- a/index.html
+++ b/index.html
@@ -100,20 +100,36 @@
         <div class="team-container"> 
           <div class="team-wrap"> 
             <h2 class="team__title">Meet our team</h2>
-            <p class="team__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed dooing eiusmod tempor incididut labore Ui / Ux , print template.</p>
+            <p class="team__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed dooing eiusmod tempor incididut labore Ui / Ux , print template. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
           </div>
           <div class="team-list">
-            <div class="team-worker-pic"></div>
-            <div class="team-worker-info"> 
-              <div class="team-worker-info__title"> </div>
-              <div class="team-worker-info__text"> </div>
-              <div class="team-worker-info__social-links"></div>
+            <div class="team-leader-photo"></div>
+            <div class="team-leader-info"> 
+              <div class="team-leader__title">mark waugh</div>
+              <div class="team-leader__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis placeat eaque saepe odit ducimus.</div>
+              <div class="team-leader-links"><a class="team-leader__link" href="#">Facebook</a><a class="team-leader__link" href="#">Dribble</a><a class="team-leader__link" href="#">Behance</a><a class="team-leader__link" href="#">Twitter</a></div>
             </div>
             <div class="team-workers">
-              <div class="team-workers__box"></div>
-              <div class="team-workers__box"></div>
-              <div class="team-workers__box"></div>
-              <div class="team-workers__box"></div>
+              <div class="team-worker__box">
+                <div class="team-worker__pic">
+                  <div class="team-worker__text team-worker__text_overlay">sokina jue</div>
+                </div>
+              </div>
+              <div class="team-worker__box">
+                <div class="team-worker__pic">
+                  <div class="team-worker__text team-worker__text_overlay">jester ronch</div>
+                </div>
+              </div>
+              <div class="team-worker__box">
+                <div class="team-worker__pic">
+                  <div class="team-worker__text team-worker__text_overlay">lili amber</div>
+                </div>
+              </div>
+              <div class="team-worker__box">
+                <div class="team-worker__pic">
+                  <div class="team-worker__text team-worker__text_overlay">jack armstrong</div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
