--- a/index.html
+++ b/index.html
@@ -135,6 +135,18 @@
         </div>
       </div>
     </section>
+    <section class="subscribe">
+      <div class="container">
+        <div class="subscribe-container">
+          <h3 class="subscribe__title">Desigh tips, tricks, and freebies. Delivered weekly.</h3>
+          <p class="subscribe__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <form class="subscribe-form" action="#" method="post"> 
+            <input class="subscribe-form__input" type="email" name="email" placeholder="Email Address...">
+            <button class="subscribe-form__btn" type="submit">subscribe</button>
+          </form>
+        </div>
+      </div>
+    </section>
     <script src="assets/js/main.min.js"></script>
     <script src="https://kit.fontawesome.com/36446de779.js" crossorigin="anonymous"> </script>
   </body>
