--- a/index.html
+++ b/index.html
@@ -147,6 +147,31 @@
         </div>
       </div>
     </section>
+    <section class="contact">
+      <div class="container"> 
+        <div class="contact-container">
+          <div class="contact-header">
+            <h2 class="contact-header__title">get in touch</h2>
+            <p class="contact-header__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus iusto at harum ratione rem assumenda adipisci cupiditate earum beatae iure est atque maiores, ex mollitia nam? Accusamus sed debitis deserunt?</p>
+          </div>
+          <div class="contact-footer"> 
+            <form class="contact-form" action="#" method="post">
+              <div class="contact-form__input-container">
+                <input class="contact-form__input" type="text" placeholder="Name">
+                <input class="contact-form__input" type="email" name="email" placeholder="Your Mail">
+              </div>
+              <textarea class="contact-form__textarea" name="" cols="30" rows="10" placeholder="Type your message"></textarea>
+              <button class="contact-form__btn" type="submit">send message</button>
+            </form>
+            <div class="contact-info">
+              <div class="contact-info-wrap">
+                <h4 class="contact-info__title">contact info</h4><span class="contact-info__line">Jalalabad 24 / A, Ambaarkhana, Sylhet, Bangladesh</span><span class="contact-info__line">redwan@deviserweb.com</span><span class="contact-info__line">(+88) 017 617 46373</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="assets/js/main.min.js"></script>
     <script src="https://kit.fontawesome.com/36446de779.js" crossorigin="anonymous"> </script>
   </body>
