--- a/index.html
+++ b/index.html
@@ -172,6 +172,19 @@
         </div>
       </div>
     </section>
+    <footer class="footer"> 
+      <div class="container"> 
+        <div class="footer-container"> 
+          <p class="footer-copyrights">&copy; Copyright @Junaed 2016, All rights reserved</p>
+          <div class="footer-social">
+            <div class="icon"></div>
+            <div class="icon"></div>
+            <div class="icon"></div>
+            <div class="icon"></div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="assets/js/main.min.js"></script>
     <script src="https://kit.fontawesome.com/36446de779.js" crossorigin="anonymous"> </script>
   </body>
