Low resolution adaptivity fixes

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <input class="contact-form__input" type="text" placeholder="Name">
                 <input class="contact-form__input" type="email" name="email" placeholder="Your Mail">
               </div>
-              <textarea class="contact-form__textarea" name="" cols="30" rows="10" placeholder="Type your message"></textarea>
+              <textarea class="contact-form__textarea" name="" cols="30" rows="8" placeholder="Type your message"></textarea>
               <button class="contact-form__btn" type="submit">send message</button>
             </form>
             <div class="contact-info">
@@ -177,10 +177,10 @@
         <div class="footer-container"> 
           <p class="footer-copyrights">&copy; Copyright @Junaed 2016, All rights reserved</p>
           <div class="footer-social">
-            <div class="icon"></div>
-            <div class="icon"></div>
-            <div class="icon"></div>
-            <div class="icon"></div>
+            <div class="icon"><a class="icon__link" href="#"> </a></div>
+            <div class="icon"><a class="icon__link" href="#"> </a></div>
+            <div class="icon"><a class="icon__link" href="#"> </a></div>
+            <div class="icon"><a class="icon__link" href="#"> </a></div>
           </div>
         </div>
       </div>
